--- a/app/package.json
+++ b/app/package.json
@@ -14,8 +14,7 @@
     "primereact": "^10.6.5",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.2.2",
-    "sass": "^1.77.2",
-    "web-vitals": "^2.1.4"
+    "sass": "^1.77.2"
   },
   "scripts": {
     "start": "react-scripts start",
