--- a/app/package.json
+++ b/app/package.json
@@ -7,7 +7,9 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "ansi-to-html": "^0.7.2",
     "bootstrap": "^5.3.3",
+    "classnames": "^2.5.1",
     "mdbreact": "^5.2.0",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
