--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "next-Launcher-app",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.1",
@@ -10,6 +10,7 @@
     "ansi-to-html": "^0.7.2",
     "bootstrap": "^5.3.3",
     "classnames": "^2.5.1",
+    "jwt-decode": "^4.0.0",
     "mdbreact": "^5.2.0",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
